Improve wizard targets and enhance security patterns
PRESET_TARGETS improvements:

- Replace unsafe ~/.config with ~/.config/nvim

- Add .vimrc, .tmux.conf to shell configs

- Add ~/.codex for Codex CLI settings

- Show only existing targets in wizard, auto-skip if none found

Template improvements:

- Add .git to blacklist (prevent nested repo backup)

- Expand encrypt_list with VPN, env files, auth tokens, k8s configs

--- a/triton_dotfiles/templates/config-template.yml
+++ b/triton_dotfiles/templates/config-template.yml
@@ -102,11 +102,15 @@ config:
     - "*.log"
     - "*.tmp"
     - "*.bak"
+    - "*.old"
     - "*~"
     - ".*.swp"
     - "*.cache"
     - "*.pid"
     - "*.lock"
+    # Git directories (avoid backing up nested repos)
+    - ".git"
+    - ".git/**"
 
   # ============================================================
   # Encryption Settings
@@ -128,9 +132,26 @@ config:
     - "*.key"
     - "*.p12"
     - "*.pfx"
+    - "*.key.json"
     # Cloud credentials
     - credentials
     - "sso/cache/*"
+    # VPN configurations
+    - "*.ovpn"
+    - "*/OpenVPN/*/config.conf"
+    # Environment files
+    - ".env"
+    - ".env.*"
+    # Auth & credentials
+    - "*credential*"
+    - "*private*"
+    - ".netrc"
+    - ".npmrc"
+    - ".pypirc"
+    - "auth.json"
+    # Kubernetes
+    - "kubeconfig"
+    - "*.kubeconfig"
     # Sensitive patterns
     - "*secret*"
     - "*password*"
